# MyCode

./: RW.cpp  cl.cpp
Simulations/mysim/: CMakeLists.txt  CMakeLists.txt~  MPI_submit.sh  azurra_submit.sh  clear_data.sh  main.cpp~  r_plot.R  r_plot.R~
Simulations/mysim/Arena/: 60Black.txt  60White.txt  70Black.txt  70White.txt  80Black.txt  80White.txt
Simulations/mysim/CONTROLLERS/: controller.h  controller.h~  ctrnn3Layers  ctrnn3Layers.cpp  ctrnn3Layers.cpp~  ctrnn3Layers.h  ctrnn3LayersHebb.cpp  ctrnn3Layers~  ctrnnFullyRecurrent.cpp  elman.cpp  perceptron  perceptron.cpp  perceptron.cpp~  perceptron~  pfsm  pfsm.cpp  pfsm.cpp~  pfsm.h  pfsm.h~  pfsm~  simple3Layers  simple3Layers.cpp  simple3Layers.cpp~
Simulations/mysim/DATA/: A.seed  A0.data  B.seed  B0.data  C.seed  C0.data  D.seed  D0.data  E.seed  E0.data  F.seed  F0.data  G.seed  G0.data  H.seed  H0.data
Simulations/mysim/EA/: chromosome.h  chromosome.h~  emoo.cpp  emoo.cpp~  emoo.h  emoo.h~  population.cpp  population.cpp~  population.h  population.h~  roulette_wheel.cpp~  roulette_wheel.h  roulette_wheel.h~  tournament.cpp  tournament.cpp~  tournament.h  tournament.h~
Simulations/mysim/EXP/: ahmed_exp.cpp  ahmed_exp.cpp~  ahmed_exp.h  ahmed_exp.h~  experiment.cpp  experiment.h  experiment.h~  first_exp.cpp  first_exp.h
Simulations/mysim/GENOME/: A0_pop_G0.geno  A0_pop_G1.geno  A0_pop_G10.geno  A0_pop_G100.geno  A0_pop_G101.geno  A0_pop_G102.geno  A0_pop_G103.geno  A0_pop_G104.geno  A0_pop_G105.geno  A0_pop_G106.geno  A0_pop_G107.geno  A0_pop_G108.geno  A0_pop_G109.geno  A0_pop_G11.geno  A0_pop_G110.geno  A0_pop_G111.geno  A0_pop_G112.geno  A0_pop_G113.geno  A0_pop_G114.geno  A0_pop_G115.geno  A0_pop_G116.geno  A0_pop_G117.geno  A0_pop_G118.geno  A0_pop_G119.geno  A0_pop_G12.geno  A0_pop_G120.geno  A0_pop_G121.geno  A0_pop_G122.geno  A0_pop_G123.geno  A0_pop_G124.geno  A0_pop_G125.geno  A0_pop_G126.geno  A0_pop_G127.geno  A0_pop_G128.geno  A0_pop_G129.geno  A0_pop_G13.geno  A0_pop_G130.geno  A0_pop_G131.geno  A0_pop_G132.geno  A0_pop_G133.geno  (+3550 more)
Simulations/mysim/MISC/: general.cpp  (+10 more)
Simulations/mysim/bin_cmakes/: CMakeLists.txt  CMakeLists.txt_Muhanad  CMakeLists.txt_ceci
(+61 files in other folders)
